Assessments/diggleby-release/src/antlr/DigglebyParser.java
// Generated from Diggleby.g4 by ANTLR 4.9.1

package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DigglebyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, WS=5, COMMA=6, DEF=7, TRUE=8, FALSE=9, 
		INT=10, LET=11, IN=12, PLUS=13, MINUS=14, MUL=15, DIV=16, MOD=17, GT=18, 
		LT=19, EQQ=20, EQ=21, AND=22, OR=23, XOR=24, NOT=25, CONCAT=26, IF=27, 
		THEN=28, ELSE=29, PRINT=30, GETINPUT=31, COLON=32, LPAREN=33, RPAREN=34, 
		LBRACE=35, RBRACE=36, STR=37, IDENT=38;
	public static final int
		RULE_type = 0, RULE_expr_list = 1, RULE_expr = 2, RULE_base_expr = 3, 
		RULE_fact = 4, RULE_param_list = 5, RULE_def = 6, RULE_prog = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"type", "expr_list", "expr", "base_expr", "fact", "param_list", "def", 
			"prog"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Bool'", "'Int'", "'String'", "'Unit'", null, "','", "'def'", 
			"'true'", "'false'", null, "'let'", "'in'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'>'", "'<'", "'=='", "'='", "'&&'", "'||'", "'^'", "'!'", "'concat'", 
			"'if'", "'then'", "'else'", "'print'", "'getInput'", "':'", "'('", "')'", 
			"'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "WS", "COMMA", "DEF", "TRUE", "FALSE", 
			"INT", "LET", "IN", "PLUS", "MINUS", "MUL", "DIV", "MOD", "GT", "LT", 
			"EQQ", "EQ", "AND", "OR", "XOR", "NOT", "CONCAT", "IF", "THEN", "ELSE", 
			"PRINT", "GETINPUT", "COLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"STR", "IDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Diggleby.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DigglebyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_listContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DigglebyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DigglebyParser.COMMA, i);
		}
		public Expr_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitExpr_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expr_listContext expr_list() throws RecognitionException {
		Expr_listContext _localctx = new Expr_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr_list);
		int _la;
		try {
			setState(26);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(18);
				expr();
				setState(21); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(19);
					match(COMMA);
					setState(20);
					expr();
					}
					}
					setState(23); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==COMMA );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(25);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BaseExprContext extends ExprContext {
		public Base_exprContext base_expr() {
			return getRuleContext(Base_exprContext.class,0);
		}
		public BaseExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitBaseExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LetContext extends ExprContext {
		public TerminalNode LET() { return getToken(DigglebyParser.LET, 0); }
		public TerminalNode IDENT() { return getToken(DigglebyParser.IDENT, 0); }
		public TerminalNode EQ() { return getToken(DigglebyParser.EQ, 0); }
		public Base_exprContext base_expr() {
			return getRuleContext(Base_exprContext.class,0);
		}
		public TerminalNode IN() { return getToken(DigglebyParser.IN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LetContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitLet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			setState(36);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET:
				_localctx = new LetContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(28);
				match(LET);
				setState(29);
				match(IDENT);
				setState(30);
				match(EQ);
				setState(31);
				base_expr(0);
				setState(32);
				match(IN);
				setState(33);
				expr();
				}
				break;
			case TRUE:
			case FALSE:
			case INT:
			case NOT:
			case CONCAT:
			case IF:
			case PRINT:
			case GETINPUT:
			case LPAREN:
			case STR:
			case IDENT:
				_localctx = new BaseExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				base_expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Base_exprContext extends ParserRuleContext {
		public Base_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_base_expr; }
	 
		public Base_exprContext() { }
		public void copyFrom(Base_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConcatContext extends Base_exprContext {
		public TerminalNode CONCAT() { return getToken(DigglebyParser.CONCAT, 0); }
		public TerminalNode LPAREN() { return getToken(DigglebyParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(DigglebyParser.RPAREN, 0); }
		public Expr_listContext expr_list() {
			return getRuleContext(Expr_listContext.class,0);
		}
		public ConcatContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitConcat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CastContext extends Base_exprContext {
		public TerminalNode LPAREN() { return getToken(DigglebyParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode COLON() { return getToken(DigglebyParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(DigglebyParser.RPAREN, 0); }
		public CastContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitCast(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MulDivOpContext extends Base_exprContext {
		public Token op;
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode MUL() { return getToken(DigglebyParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(DigglebyParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(DigglebyParser.MOD, 0); }
		public MulDivOpContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitMulDivOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintContext extends Base_exprContext {
		public TerminalNode PRINT() { return getToken(DigglebyParser.PRINT, 0); }
		public TerminalNode LPAREN() { return getToken(DigglebyParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(DigglebyParser.RPAREN, 0); }
		public PrintContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotContext extends Base_exprContext {
		public TerminalNode NOT() { return getToken(DigglebyParser.NOT, 0); }
		public FactContext fact() {
			return getRuleContext(FactContext.class,0);
		}
		public NotContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitNot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PlusMinusOpContext extends Base_exprContext {
		public Token op;
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(DigglebyParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(DigglebyParser.MINUS, 0); }
		public PlusMinusOpContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitPlusMinusOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GetInputContext extends Base_exprContext {
		public TerminalNode GETINPUT() { return getToken(DigglebyParser.GETINPUT, 0); }
		public TerminalNode LPAREN() { return getToken(DigglebyParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(DigglebyParser.RPAREN, 0); }
		public GetInputContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitGetInput(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FnCallContext extends Base_exprContext {
		public TerminalNode IDENT() { return getToken(DigglebyParser.IDENT, 0); }
		public TerminalNode LPAREN() { return getToken(DigglebyParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(DigglebyParser.RPAREN, 0); }
		public Expr_listContext expr_list() {
			return getRuleContext(Expr_listContext.class,0);
		}
		public FnCallContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitFnCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FacContext extends Base_exprContext {
		public FactContext fact() {
			return getRuleContext(FactContext.class,0);
		}
		public FacContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitFac(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RelOpContext extends Base_exprContext {
		public Token op;
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode LT() { return getToken(DigglebyParser.LT, 0); }
		public TerminalNode GT() { return getToken(DigglebyParser.GT, 0); }
		public TerminalNode EQQ() { return getToken(DigglebyParser.EQQ, 0); }
		public RelOpContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitRelOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfThenElseContext extends Base_exprContext {
		public TerminalNode IF() { return getToken(DigglebyParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(DigglebyParser.LPAREN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(DigglebyParser.RPAREN, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(DigglebyParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(DigglebyParser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(DigglebyParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(DigglebyParser.RBRACE, i);
		}
		public TerminalNode ELSE() { return getToken(DigglebyParser.ELSE, 0); }
		public IfThenElseContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitIfThenElse(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BoolOpContext extends Base_exprContext {
		public Token op;
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode AND() { return getToken(DigglebyParser.AND, 0); }
		public TerminalNode OR() { return getToken(DigglebyParser.OR, 0); }
		public TerminalNode XOR() { return getToken(DigglebyParser.XOR, 0); }
		public BoolOpContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitBoolOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Base_exprContext base_expr() throws RecognitionException {
		return base_expr(0);
	}

	private Base_exprContext base_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Base_exprContext _localctx = new Base_exprContext(_ctx, _parentState);
		Base_exprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_base_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				_localctx = new NotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(39);
				match(NOT);
				setState(40);
				fact();
				}
				break;
			case 2:
				{
				_localctx = new ConcatContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(41);
				match(CONCAT);
				setState(42);
				match(LPAREN);
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << INT) | (1L << LET) | (1L << NOT) | (1L << CONCAT) | (1L << IF) | (1L << PRINT) | (1L << GETINPUT) | (1L << LPAREN) | (1L << STR) | (1L << IDENT))) != 0)) {
					{
					setState(43);
					expr_list();
					}
				}

				setState(46);
				match(RPAREN);
				}
				break;
			case 3:
				{
				_localctx = new PrintContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(47);
				match(PRINT);
				setState(48);
				match(LPAREN);
				setState(49);
				expr();
				setState(50);
				match(RPAREN);
				}
				break;
			case 4:
				{
				_localctx = new GetInputContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(52);
				match(GETINPUT);
				setState(53);
				match(LPAREN);
				setState(54);
				match(RPAREN);
				}
				break;
			case 5:
				{
				_localctx = new FnCallContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(55);
				match(IDENT);
				setState(56);
				match(LPAREN);
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << INT) | (1L << LET) | (1L << NOT) | (1L << CONCAT) | (1L << IF) | (1L << PRINT) | (1L << GETINPUT) | (1L << LPAREN) | (1L << STR) | (1L << IDENT))) != 0)) {
					{
					setState(57);
					expr_list();
					}
				}

				setState(60);
				match(RPAREN);
				}
				break;
			case 6:
				{
				_localctx = new IfThenElseContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(61);
				match(IF);
				setState(62);
				match(LPAREN);
				setState(63);
				expr();
				setState(64);
				match(RPAREN);
				setState(65);
				match(LBRACE);
				setState(66);
				expr();
				setState(67);
				match(RBRACE);
				setState(68);
				match(ELSE);
				setState(69);
				match(LBRACE);
				setState(70);
				expr();
				setState(71);
				match(RBRACE);
				}
				break;
			case 7:
				{
				_localctx = new CastContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(73);
				match(LPAREN);
				setState(74);
				expr();
				setState(75);
				match(COLON);
				setState(76);
				type();
				setState(77);
				match(RPAREN);
				}
				break;
			case 8:
				{
				_localctx = new FacContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(79);
				fact();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(94);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new RelOpContext(new Base_exprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_base_expr);
						setState(82);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(83);
						((RelOpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << LT) | (1L << EQQ))) != 0)) ) {
							((RelOpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(84);
						base_expr(13);
						}
						break;
					case 2:
						{
						_localctx = new BoolOpContext(new Base_exprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_base_expr);
						setState(85);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(86);
						((BoolOpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AND) | (1L << OR) | (1L << XOR))) != 0)) ) {
							((BoolOpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(87);
						base_expr(12);
						}
						break;
					case 3:
						{
						_localctx = new MulDivOpContext(new Base_exprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_base_expr);
						setState(88);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(89);
						((MulDivOpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MUL) | (1L << DIV) | (1L << MOD))) != 0)) ) {
							((MulDivOpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(90);
						base_expr(11);
						}
						break;
					case 4:
						{
						_localctx = new PlusMinusOpContext(new Base_exprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_base_expr);
						setState(91);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(92);
						((PlusMinusOpContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
							((PlusMinusOpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(93);
						base_expr(10);
						}
						break;
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FactContext extends ParserRuleContext {
		public FactContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fact; }
	 
		public FactContext() { }
		public void copyFrom(FactContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StrContext extends FactContext {
		public TerminalNode STR() { return getToken(DigglebyParser.STR, 0); }
		public StrContext(FactContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitStr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdentContext extends FactContext {
		public TerminalNode IDENT() { return getToken(DigglebyParser.IDENT, 0); }
		public IdentContext(FactContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitIdent(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParensContext extends FactContext {
		public TerminalNode LPAREN() { return getToken(DigglebyParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(DigglebyParser.RPAREN, 0); }
		public ParensContext(FactContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitParens(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TrueContext extends FactContext {
		public TerminalNode TRUE() { return getToken(DigglebyParser.TRUE, 0); }
		public TrueContext(FactContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitTrue(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FalseContext extends FactContext {
		public TerminalNode FALSE() { return getToken(DigglebyParser.FALSE, 0); }
		public FalseContext(FactContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitFalse(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnitContext extends FactContext {
		public TerminalNode LPAREN() { return getToken(DigglebyParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(DigglebyParser.RPAREN, 0); }
		public UnitContext(FactContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitUnit(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntContext extends FactContext {
		public TerminalNode INT() { return getToken(DigglebyParser.INT, 0); }
		public IntContext(FactContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DigglebyVisitor ) return ((DigglebyVisitor<? extends T>)visitor).visitInt(this);
			else return visitor.visitChildren(this);
		}
	}
